[package]
edition      = "2024"
name         = "esp32-c3-temperature"
rust-version = "1.88"
version      = "0.1.0"

[dependencies]
critical-section = "1.2.0"
dotenvy_macro = "0.15.7"
embassy-executor = "0.9.1"
embassy-net = { version = "0.8.0", features = ["tcp", "dhcpv4"] }
embassy-time = "0.5.0"
embedded-io-async = "0.7.0"
esp-alloc = { version = "0.9.0", features = ["esp32c3"] }
esp-backtrace = { version = "0.18.1", features = ["panic-handler", "println", "esp32c3"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3"] }
esp-hal = { version = "~1.0", features = ["esp32c3", "unstable", "log-04"] }
esp-hal-smartled2 = { version = "0.28", features = ["esp32c3"] }
esp-println = { version = "0.16", features = ["esp32c3", "log-04"] }
esp-radio = { version = "0.17", features = ["wifi", "esp32c3", "log-04"] }
esp-rtos = { version = "0.2.0", features = ["embassy", "esp32c3", "esp-radio", "log-04"] }
picoserve = { version = "0.18", features = ["embassy"] }
smart-leds = "0.4.0"
static_cell = "2.1.1"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
